[gd_scene load_steps=6 format=2]

[ext_resource path="res://objects/Message.tscn" type="PackedScene" id=1]
[ext_resource path="res://music/ending.ogg" type="AudioStream" id=2]
[ext_resource path="res://scenes/Ending.gd" type="Script" id=3]
[ext_resource path="res://fonts/ui.tres" type="DynamicFont" id=4]
[ext_resource path="res://objects/PressStart.tscn" type="PackedScene" id=5]

[node name="Ending" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" parent="." instance=ExtResource( 1 )]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 0.0
margin_top = -20.0
margin_right = 0.0
margin_bottom = -20.0
rect_pivot_offset = Vector2( 0, 0 )

[node name="Label_ThankYou" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -142.0
margin_top = -10.0
margin_right = 142.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0.501961, 0.501961, 0.501961, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Thank you for playing."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio_Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "Music"

[node name="Tween" type="Tween" parent="."]

[node name="PressStart" parent="." instance=ExtResource( 5 )]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -34.0
margin_top = -96.0
margin_right = 34.0
margin_bottom = -64.0

[node name="Blackout" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}
